fix(json-viewer): wrap long keys

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,6 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.td-json-formatter-wrapper .key {
+  word-break: break-all;
+}
